src/objects/Product_Rate_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Period__c</fullName>
        <formula>SUBSTITUTE(text(Valid_From_Date__c), &apos;-&apos;, &apos;/&apos;) + &quot; -- &quot; + SUBSTITUTE(text(Valid_To_Date__c), &apos;-&apos;, &apos;/&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id from former KVH system</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Charges__c</fullName>
        <label>No. of Charges</label>
        <summaryForeignKey>Product_Rate_Plan_Charge__c.Product_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_One_Time_Charges__c</fullName>
        <label>No of One Time Charges</label>
        <summaryFilterItems>
            <field>Product_Rate_Plan_Charge__c.Price_Type__c</field>
            <operation>equals</operation>
            <value>One Time</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Rate_Plan_Charge__c.Product_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_ID_18_char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Rate Plan ID (18-char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Rate Plans</relationshipLabel>
        <relationshipName>Product_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TODAY() &gt;= Valid_From_Date__c &amp;&amp; (TODAY() &lt;= Valid_To_Date__c || ISBLANK(Valid_To_Date__c)), &quot;Active&quot;, IF(Valid_From_Date__c &gt; TODAY(), &quot;Future&quot; , &quot;Expired&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Date__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Product Rate Plan</label>
    <nameField>
        <label>Product Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>